# pyro

./: Cargo.toml  README.md
benches/: iter.rs  specs.rs
pyro/: Cargo.toml
pyro/src/: chunk.rs  lib.rs  slice.rs  zip.rs
src/: lib.rs  slice.rs
