[package]
name = "pyro"
version = "0.1.0"
authors = ["maik <maikklein@googlemail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MaikKlein/pyro"
keywords = ["ecs"]
documentation = "https://docs.rs/pyro"
description = "Entity component system"

[dependencies]
itertools = "0.7"
rayon = "1"
downcast-rs = "1.0"
fnv = "1.0"


[dev-dependencies]
cgmath = "0.16"
rand = "0.5"

[profile.bench]
opt-level = 3
debug=true
[profile.release]
opt-level = 3
debug=true
