[package]
name = "pyro"
version = "0.2.5"
authors = ["maik <maikklein@googlemail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MaikKlein/pyro"
keywords = ["ecs"]
documentation = "https://docs.rs/pyro"
description = "Entity component system"

[dependencies]
itertools = "0.7"
rayon = "1"
downcast-rs = "1.0"
parking_lot = "0.6"
vec_map = "0.8"
log = "0.4"

[features]
default = []
better-errors = ["typedef/nightly"]

[dependencies.typedef]
version = "0.3"
default-features = false


[dev-dependencies]
cgmath = "0.16"
rand = "0.5"

[profile.bench]
opt-level = 3
debug=true


