[package]
name = "pyro"
version = "0.2.5"
authors = ["maik <maikklein@googlemail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MaikKlein/pyro"
keywords = ["ecs"]
documentation = "https://docs.rs/pyro"
description = "Entity component system"

[dependencies]
rayon = { version= "1", optional = true }
parking_lot = "0.6"
vec_map = "0.8"
log = "0.4"

[features]
default = []
threading = ["rayon"]
better-errors = ["typedef/nightly"]

[dependencies.typedef]
version = "0.3"
default-features = false
